    in some functions.
  * Use aptitude instead of apt-get in chroot-script, but
    only if it's available.
  * Use DEBIAN_FRONTEND='noninteractive' so we avoid unnecessary
    questions when installing. (Thanks, formorer!)
  * Added additional check to grub code for running sed on
    /boot/grub/menu.lst.
  * Updated TODO file.
  * Use asciidoc for manpage generation.

 -- Michael Prokop <mika@grml.org>  Fri, 13 Apr 2007 17:57:29 +0200

grml-debootstrap (0.6) unstable; urgency=low

  * Support Debian release with codename 'lenny'. Depend on
    debootstrap/cdebootstrap versions supporting lenny therefore.
  * Split all the code into separate functions.
  * Export LANG=C and LC_ALL=C as we don't have the locales inside
    the chroot when running grml-debootstrap. (Just a cosmetic
    change as there aren't any errors but warning messages from
    dpkg.)
  * Always assume architecture of the running system (overwriting
    via $ARCH is still supported of course).
  * Write variables from grml-debootstrap to /etc/debootstrap/variables
    and provide it to chroot-script.
  * Support stages. [Closes: issue151]

 -- Michael Prokop <mika@grml.org>  Mon,  9 Apr 2007 14:35:21 +0200

grml-debootstrap (0.5) unstable; urgency=low

  * Changed Architecture from any to all.

 -- Michael Prokop <mika@grml.org>  Sat, 24 Mar 2007 16:58:53 +0100

grml-debootstrap (0.4) unstable; urgency=low

  * Support installation into directory.

 -- Michael Prokop <mika@grml.org>  Fri, 17 Nov 2006 23:00:38 +0100

grml-debootstrap (0.3) unstable; urgency=low

  * Initial support for $ARCH.
  * Added function for clean exit (using trap).

 -- Michael Prokop <mika@grml.org>  Fri, 10 Nov 2006 00:51:09 +0100

grml-debootstrap (0.2) unstable; urgency=low

  * Support Sarge and Sid as "$RELEASE"s as well.
  * Added 'debootstrap | cdebootstrap' and grml-etc-core to
    depends.
  * Added support for:
    - cdebootstrap [broken for sarge as $RELEASE, see #390510]