@@ -1,0 +1,14 @@
+#compdef grml-debootstrap
+# vim:ft=zsh
+
+_arguments -s                                                                                   \
+  '(-h --help)'{-h,--help}'[this help text]:'                                                   \
+  '(-v --version)'{-v,--version}'[display version information]:'                                \
+  '(-m --mirror)'{-m,--mirror}'[specify mirror for apt{-get,itude}]:mirror'                     \
+  '(-p --mntpoint)'{-p,--mntpoint}'[mountpoint for the target system]:mount point:_path_files'  \
+  '(-r --release)'{-r,--release}'[specify the release name of the new system]:release'          \
+  '(-t --target)'{-t,--target}'[target partition or directory]:device or directory:_path_files' \
+  '--grub[installation device for grub]:grub syntax'                                            \
+  '--groot[root device for usage in grub]:grub syntax'                                          \
+  '--password[specify password for root user]'
+
